--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_PORT=5432
 # Email Settings
 EMAIL_DEBUG = True
 EMAIL_HOST_USER = 'ashurqulovorzubek@gmail.com'
-EMAIL_HOST_PASSWORD = 'clvh fbrc rweu tmkh'
+EMAIL_HOST_PASSWORD = 'ediu eoky kkyc ssti'
 
 
 # Payme Settings
